adjust margins on About, Portfolio, and Contact pages for correct display on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@
   text-align: center;
   background-image: url('../src/Assets/images/wes-hicks-ZW6RUvsaFTc-unsplash.jpg');
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
 }
